# Audio-Oracle

./: .gitignore  AudioOracle.cpp  AudioOracle.h  CMakeLists.txt  graph.tex  main.cpp  marsyas_play_file.cpp  marsyas_test.cpp  test_add_letter.cpp  test_find_better.cpp  test_fos.cpp  test_lcs.cpp
FactorOracleString/: CMakeLists.txt  FactorOracle.cpp  FactorOracle.h  catch.hpp  main.cpp  test_add_letter.cpp  test_find_better.cpp  test_fos.cpp  test_lcs.cpp
doc/: config
html/: _factor_oracle_8cpp.html  _factor_oracle_8h.html  _factor_oracle_8h_source.html  annotated.html  class_factor_oracle-members.html  class_factor_oracle.html  class_single_transition-members.html  class_single_transition.html  class_state-members.html  class_state.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  main_8cpp.html
html/search/: all_1.js  all_4.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
latex/: _factor_oracle_8cpp.tex  _factor_oracle_8h.tex  annotated.tex  class_factor_oracle.tex  class_single_transition.tex  class_state.tex  files.tex  main_8cpp.tex  refman.tex
src/: AudioOracle.cpp  AudioOracle.h  AudioOracleComplete.cpp  AudioOracleComplete.h  AudioOracleGist.cpp  AudioOracleGist.h  PlayFileAudioOracle.cpp  gist_play_file.cpp  gist_play_file.h  main.cpp  marsyas_play_file.cpp
src/Factor-Oracle/: FactorOracle.h
tests/: marsyas_output.cpp  rearrange_audio.cpp
tests/Factor-Oracle/: test_add_letter.cpp  test_find_better.cpp  test_fos.cpp  test_integral.cpp  test_lcs.cpp
