cmake_minimum_required(VERSION 3.10)
project(FactorOracleString)

set(CMAKE_CXX_STANDARD 11)

add_library(FO src/Factor-Oracle/FactorOracle.cpp src/Factor-Oracle/FactorOracle.h)
add_executable(FactorOracleString src/main.cpp)
add_executable(TestLCS 3rd-party/catch2.hpp 3rd-party/catch.hpp tests/Factor-Oracle/test_lcs.cpp)
add_executable(TestAddLetter 3rd-party/catch2.hpp 3rd-party/catch.hpp tests/Factor-Oracle/test_add_letter.cpp)
add_executable(TestFindBetter 3rd-party/catch2.hpp 3rd-party/catch.hpp tests/Factor-Oracle/test_find_better.cpp)
add_executable(TestFOS 3rd-party/catch2.hpp 3rd-party/catch.hpp tests/Factor-Oracle/test_fos.cpp)
target_link_libraries(FactorOracleString FO)
target_link_libraries(TestLCS FO)
target_link_libraries(TestAddLetter FO)
target_link_libraries(TestFindBetter FO)
target_link_libraries(TestFOS FO)
include_directories("/Users/mariapaulacarrero/Downloads/marsyas-0.5.0/include")
add_library(libmarsyas-qt5 STATIC IMPORTED)
set_target_properties(libmarsyas-qt5 PROPERTIES IMPORTED_LOCATION "/Users/mariapaulacarrero/Downloads/marsyas-0.5.0/lib/libmarsyas-qt5.a")
add_library(libmarsyas SHARED IMPORTED)
set_target_properties(libmarsyas PROPERTIES IMPORTED_LOCATION "/Users/mariapaulacarrero/Downloads/marsyas-0.5.0/lib/libmarsyas.dylib")
add_library(AO src/AudioOracle.cpp src/AudioOracle.h)
add_library(AOGist src/AudioOracleGist.h src/AudioOracleGist.cpp)
include_directories("/Users/mariapaulacarrero/Downloads/portaudio/include")
include_directories("/Users/mariapaulacarrero/Downloads/Gist-master/src")
add_library(portaudio SHARED IMPORTED)
set_target_properties(portaudio PROPERTIES IMPORTED_LOCATION "/usr/local/lib/libportaudio.a")
add_executable(AudioOracleEx src/marsyas_play_file.cpp 3rd-party/lib/Gist/src/Gist.cpp 3rd-party/lib/Gist/libs/kiss_fft130/kiss_fft.c 3rd-party/lib/Gist/src/AccelerateFFT.cpp 3rd-party/lib/Gist/src/CoreFrequencyDomainFeatures.cpp 3rd-party/lib/Gist/src/CoreTimeDomainFeatures.cpp 3rd-party/lib/Gist/src/MFCC.cpp 3rd-party/lib/Gist/src/OnsetDetectionFunction.cpp 3rd-party/lib/Gist/src/OnsetDetectionFunction.cpp 3rd-party/lib/Gist/src/WindowFunctions.cpp 3rd-party/lib/Gist/src/Yin.cpp)
target_link_libraries(AudioOracleEx libmarsyas libmarsyas-qt5 portaudio AO)
add_executable(AudioOracleGist src/gist_play_file.cpp 3rd-party/lib/Gist/src/Gist.cpp 3rd-party/lib/Gist/libs/kiss_fft130/kiss_fft.c 3rd-party/lib/Gist/src/AccelerateFFT.cpp 3rd-party/lib/Gist/src/CoreFrequencyDomainFeatures.cpp 3rd-party/lib/Gist/src/CoreTimeDomainFeatures.cpp 3rd-party/lib/Gist/src/MFCC.cpp 3rd-party/lib/Gist/src/OnsetDetectionFunction.cpp 3rd-party/lib/Gist/src/OnsetDetectionFunction.cpp 3rd-party/lib/Gist/src/WindowFunctions.cpp 3rd-party/lib/Gist/src/Yin.cpp)
target_link_libraries(AudioOracleGist libmarsyas libmarsyas-qt5 portaudio AOGist)
add_executable(AudioOracleComplete src/AudioOracleComplete.cpp 3rd-party/lib/Gist/src/Gist.cpp 3rd-party/lib/Gist/libs/kiss_fft130/kiss_fft.c 3rd-party/lib/Gist/src/AccelerateFFT.cpp 3rd-party/lib/Gist/src/CoreFrequencyDomainFeatures.cpp 3rd-party/lib/Gist/src/CoreTimeDomainFeatures.cpp 3rd-party/lib/Gist/src/MFCC.cpp 3rd-party/lib/Gist/src/OnsetDetectionFunction.cpp 3rd-party/lib/Gist/src/OnsetDetectionFunction.cpp 3rd-party/lib/Gist/src/WindowFunctions.cpp 3rd-party/lib/Gist/src/Yin.cpp)
target_link_libraries(AudioOracleComplete libmarsyas libmarsyas-qt5 portaudio AOGist)
add_executable(AudioOracleOutput tests/marsyas_output.cpp)
target_link_libraries(AudioOracleOutput libmarsyas libmarsyas-qt5 AO)

add_executable(AudioRearrange tests/rearrange_audio.cpp 3rd-party/AudioFile.h)

#===============================================================================
set (CMAKE_SUPPRESS_REGENERATION true)

function(SIMPLE SETUPFO)
    target_compile_options(${SETUPFO} PUBLIC -fsanitize=address)
    target_link_libraries(${SETUPFO} -fsanitize=address)
endfunction()

function(TESTS TestName)
    add_test(NAME ${TestName}_ COMMAND ${TestName})
endfunction()

tests(TestLCS)
tests(TestAddLetter)
tests(TestFindBetter)
tests(TestFOS)
simple(FactorOracleString)
simple(TestLCS)
simple(TestAddLetter)
simple(TestFindBetter)
simple(TestFOS)